--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
-        "react-router-dom": "^6.26.2"
+        "react-router-dom": "^6.26.2",
+        "react-scroll": "^1.9.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
         "@types/node": "^22.5.5",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/react-scroll": "^1.8.10",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.9.0",
