--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tippyjs/react": "^4.2.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
-        "react-scroll": "^1.9.0"
+        "react-scroll": "^1.9.0",
+        "tippy.js": "^6.3.7"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
