--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "deploy:preview": "pnpm build && firebase hosting:channel:deploy preview --expires 7d"
     },
     "dependencies": {
         "@tippyjs/react": "^4.2.6",
@@ -31,6 +32,7 @@
         "eslint": "^9.9.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
+        "firebase-tools": "^13.27.0",
         "globals": "^15.9.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.11",
